# stori-newsletter

./: LICENSE  README.md  docker-compose.yml  init.sh  package-lock.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/source/: __init__.py
backend/source/adapters/controllers/: newsletter.py  unsubscribe_email_address.py
backend/source/adapters/file_storage/: fake.py  local.py
backend/source/adapters/newsletter_dispatcher/: fake.py  ses.py
backend/source/adapters/newsletter_repository/: fake.py  mongo.py
backend/source/adapters/scripts/: scheduled_newsletters_sender.py
backend/source/adapters/unsubscribed_email_address_repository/: fake.py  mongo.py
backend/source/application/: add_newsletter_file.py  create_newsletter.py  exceptions.py  get_all_newsletters.py  get_newsletter_by_id.py  send_newsletter.py  send_scheduled_newsletters.py  unsubscribe_email_address.py  update_newsletter.py
backend/source/domain/: email_address.py  newsletter.py
backend/source/infrastructure/: aws.py  http_server.py  logger.py  mongo.py  settings.py
backend/source/ports/: file_storage.py  newsletter_dispatcher.py  newsletter_repository.py  unsubscribed_email_address_repository.py
backend/tests/: test_add_newsletter_file_service.py  test_create_newsletter_service.py  test_get_all_newsletters_service.py  test_get_newsletter_by_id_service.py  test_send_newsletter_service.py  test_unsubscribe_email_address_service.py  test_update_newsletter_service.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: page.js
(+9 files in other folders)
